K8S/gateway_api/source/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: sample
  # annotations:
  #   cert-manager.io/cluster-issuer: dev-ca-issuer
  #   cert-manager.io/common-name: sample.web.local
  #   cert-manager.io/subject-organizations: "home dev lab"
  #   cert-manager.io/subject-countries: "RU"
  #   cert-manager.io/subject-localities: "Moscow"
  #   cert-manager.io/duration: "9125h"
  #   cert-manager.io/renew-before: "360h"
  #   cert-manager.io/usages: "server auth"
  #   cert-manager.io/private-key-algorithm: RSA
  #   cert-manager.io/private-key-encoding: "PKCS8"
  #   cert-manager.io/private-key-size: "4096"
  #   cert-manager.io/private-key-rotation-policy: Always
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      # hostname: sample.web.local
      tls:
        mode: Terminate
        certificateRefs:
          - name: sample-tls
            namespace: sample
      allowedRoutes:
        namespaces:
          from: All
