K8S/gateway_api/source/blue-green.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-http-route
  namespace: sample
spec:
  parentRefs:
  - name: testapp-gw
    sectionName: http
  hostnames:
  - testapp.web.local
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-https-route
  namespace: sample
spec:
  parentRefs:
    - name: testapp-gw
      sectionName: https
  hostnames:
    - testapp.web.local
  rules:
    - backendRefs:
      - name: testapp-one
        port: 80
        weight: 90
      - name: testapp-two
        port: 80
        weight: 10
