K8S/gateway_api/source/header-modifiers.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-http-route
  namespace: sample
spec:
  parentRefs:
  - name: testapp-gw
    sectionName: http
  hostnames:
  - testapp.web.local
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-https-route
  namespace: sample
spec:
  parentRefs:
  - name: testapp-gw
    sectionName: https
  hostnames:
  - testapp.web.local
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: Request-Test-Header
              value: "Request test value"
          remove:
            - "X-Envoy-External-Address"
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          add:
          - name: Response-Test-Header
            value: "Response test value"
    backendRefs:
      - name: testapp-one
        port: 80
