K8S/gateway_api/source/path-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-http-route
  namespace: sample
spec:
  parentRefs:
  - name: testapp-gw
    sectionName: http
  hostnames:
  - testapp.web.local
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-https-route
  namespace: sample
spec:
  parentRefs:
  - name: testapp-gw
    sectionName: https
  hostnames:
  - testapp.web.local
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
      - name: testapp-one
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-login-to-auth
  namespace: sample
spec:
  parentRefs:
  - name: testapp-gw
    sectionName: https
  hostnames:
  - testapp.web.local
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /login
    filters:
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplaceFullPath
            replaceFullPath: /auth
          statusCode: 302
